Fix spacing on homepage and responsiveness

--- a/src/assets/styles/components/_cta.scss
+++ b/src/assets/styles/components/_cta.scss
@@ -3,7 +3,7 @@
 		padding: 120px 0px;
 
 		@include mq-down(lg) {
-			padding: 64px 16px;
+			padding: 64px 24px;
 		}
 
 		.copy-email {
